Fix user image misalignment and add user info in sidebar

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 }
 .lateral{
     flex-basis: 25%;
-    background-color: #D3D3D3;
-    border-right: 10px solid #e0e0e0;
+    background-color: #FFB400;
+    border-right: 10px solid #ddc07b;
 }
 
 .conteudo{
@@ -13,7 +13,7 @@
     padding-left: 30px;
 }
 
-.barra-lateral img {
+.lateral img {
   width: 100%;
   height: auto;
   display: block;
@@ -51,12 +51,6 @@
   text-align: center; 
 }
 
-.card img {
-  width: 50px;               
-  height: 50px;
-  margin-bottom: 10px;      
-}
-
 
 .card p {
   margin: 0;                 
@@ -69,3 +63,39 @@
   box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
   transition: all 0.2s ease-in-out;
 }
+
+.card-education {
+  display: flex;
+  flex-direction: column;    
+  align-items: center;       
+  justify-content: center;
+
+  background-color: #f8f8f8; 
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;        
+  padding: 20px;           
+  
+  width: 120px;        
+  height: 120px;        
+  
+  text-align: center; 
+}
+
+.card-education img {
+  width: 140px;               
+  height: 50px;
+  margin-bottom: 10px;      
+}
+
+.card-education p {
+  margin: 0;                 
+  font-size: 14px;           
+  font-weight: 500;         
+}
+
+.card-education:hover {
+  transform: translateY(-5px);    
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+  transition: all 0.2s ease-in-out;
+}
+
